2010-01-28  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotThrowInUnexpectedLocationTest.cs: Document the addition of
	the TryParse method.

2010-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotThrowInUnexpectedLocationTest.cs: Add TryParse as a 
	location where exceptions should never be thrown. Fix unbox 
	by adding unbox.any opcode. Do not use a OpCodeBitmask for a
	single opcode (ckfinite). Avoid creating equalityComparerEquals
	and equalityComparerHashCode for each new type.

2010-01-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidArgumentExceptionDefaultConstructorRule.cs: Apply Avoid
	RepetitiveCallsToPropertiesRule
	* DoNotThrowInUnexpectedLocationRule.cs: Apply MethodCanBeMadeStatic
	Rule
	* MissingExceptionConstructorsRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule
	* UseObjectDisposedExceptionRule.cs: Apply MethodCanBeMadeStaticRule

2010-01-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotThrowInUnexpectedLocationRule.cs: Fix bitmask to include
	Code.Unbox_Any. This will fix unit tests under both Mono 2.6 and
	MS .NET (unbox was likely used in earlier Mono releases)

2010-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* InstantiateArgumentExceptionCorrectlyRule.cs: Fix bug #567995
	for indexers. Also reduce to Severity.Low (won't be shown by
	default) the usage of "value" in properties (since it's somewhat
	popular even if unhelpful as a name).

2009-07-24  Jesse Jones  <jesjones@mindspring.com>

	* MissingExceptionConstructorsRule.cs: Rewrote the description.

2009-07-03  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-03-15  Jesse Jones  <jesjones@mindspring.com> 

	* UseObjectDisposedExceptionRule.cs, Makefile.am: Added new rule.

2009-01-10  Jesse Jones  <jesjones@mindspring.com> 

	* DoNotThrowInUnexpectedLocationRule.cs: Fixed an assert which
	broke when the code was switched from Mono.Cecil.Cil.Code.ToString
	to Mono.Cecil.Cil.OpCode.Name.
